src/objects/License_Type__mdt.object
<CustomObject>
    <description>This is the configuration that helps create application.</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the type of application.</description>
        <label>Application Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>Credential Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential.</description>
        <label>Credential</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualBusinessType__c</fullName>
        <label>IndividualBusinessType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object Name</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This refers to the program area.</description>
        <label>Program Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_type_Name__c</fullName>
        <label>Record type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>License Type</label>
    <listViews>
        <fullName>myView</fullName>
        <columns>MasterLabel</columns>
        <columns>Application_Type__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>IndividualBusinessType__c</columns>
        <columns>Record_type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>myView</label>
    </listViews>
    <pluralLabel>License Types</pluralLabel>
</CustomObject>